--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/Prajesh.JPG" alt="Image"/></a></div>
-          <div class="h2 title">Prajesh puri</div>
+          <div class="h2 title">Prajesh Puri</div>
           <p class="category text-white"> Tech Enthusiast, Web Developer, UnderGrad</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Get In Touch</a>
         </div>
@@ -68,7 +68,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Prajesh puri. Tech Enthusiast, Web Developer and UnderGrad.</p>
-            <p>I am a sophomore BCA student. A self motivated and hard worker seeking projects which provide a vast pool of opportunities to expand my knowledge. A reliable and results-driven individual who is able to learn quickly.</p>
+            <p>I am a third Year BCA student. A self motivated and hard worker seeking projects which provide a vast pool of opportunities to expand my knowledge. A reliable and results-driven individual who is able to learn quickly.</p>
             <p>Regularly working on improving my <strong>Front end skills</strong> and <strong> Programming skills </strong>.</p>
           </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">19</div>
+              <div class="col-sm-8">20</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
