added dark mode

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"> <!-- <a class="navbar-brand" href="#" rel="tooltip">Hello World</a>-->
-              <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
+            <div class="navbar-translate"> <a class="navbar-brand" href="#" rel="tooltip"></a>
+              <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-bar bar1"></span>
+                <span class="navbar-toggler-bar bar2"></span>
+                <span class="navbar-toggler-bar bar3"></span>
+              </button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
@@ -41,7 +45,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/0-1.gif');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/Prajesh.JPG" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/prajesh.jpg" alt="Image"/></a></div>
           <div class="h2 title">Prajesh Puri</div>
           <p class="category text-white"> Tech Enthusiast, Web Developer, UnderGrad</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Get In Touch</a>
@@ -60,12 +64,12 @@
     </div>
   </div>
 </div>
-<div class="section" id="about">
+<div class="section" id="about" style="background-color:black;">
   <div class="container">
-    <div class="card" data-aos="fade-up" data-aos-offset="10">
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <div class="card-body">
+    <div class="card" data-aos="fade-up" data-aos-offset="10" style="background-color:rgb(22, 22, 22);">
+      <div class="row" style="color:white;">
+        <div class="col-lg-6 col-md-12" > 
+          <div class="card-body" >
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Prajesh puri. Tech Enthusiast, Web Developer and UnderGrad.</p>
             <p>I am a third Year BCA student. A self motivated and hard worker seeking projects which provide a vast pool of opportunities to expand my knowledge. A reliable and results-driven individual who is able to learn quickly.</p>
@@ -101,21 +105,21 @@
     </div>
   </div>
 </div>
-<div class="section" id="skill">
-  <div class="container">
+<div class="section" id="skill" style="background-color:black; color:white;">
+  <div class="container" style="color:white;">
     <div class="h4 text-center mb-4 title">Professional Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <div class="card-body">
-        <div class="row">
+      <div class="card-body" style="background-color:rgb(22, 22, 22);">
+        <div class="row" >
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+            <div class="progress-container progress-primary"><span class="progress-badge" style="color:white;">HTML</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge"  style="color:white;">CSS</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div><span class="progress-value">55%</span>
               </div>
@@ -124,14 +128,14 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Js</span>
+            <div class="progress-container progress-primary"><span class="progress-badge"  style="color:white;">Js</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">C++ with DS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge"  style="color:white;">C++ with DS</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
               </div>
@@ -142,12 +146,12 @@
     </div>
   </div>
 </div>
-<div class="section">
+<div class="section" style="background-color:black; color:white;">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
-<div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+<div class="card" style="background-color:rgb(22, 22, 22);">
+      <div class="row" >
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" >
           <div class="card-body cc-education-header">
             <p>2017 - 2020</p>
             <div class="h5">Bachelor's Degree</div>
@@ -161,7 +165,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card" style="background-color:rgb(22, 22, 22);">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
@@ -179,15 +183,15 @@
     </div>
   </div>
 </div>
-<div class="section" id="contact">
+<div class="section" id="contact" style="background-color:black; color:white;">
   <div class="cc-contact-information">
     <div class="container">
       <div class="cc-contact">
-        <div class="row">
-          <div class="col-md-9">
-            <div class="card mb-0" data-aos="zoom-in">
+        <div class="row" > 
+          <div class="col-md-9" >
+            <div class="card mb-0" data-aos="zoom-in" style="background-color:rgb(22, 22, 22);">
               <div class="h4 text-center title">Contact Me</div>
-              <div class="row">
+              <div class="row" >
 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
@@ -207,7 +211,7 @@
   </div>
 </div></div>
     </div>
-    <footer class="footer">
+    <footer class="footer" style="background-color:black; color:white;">
       <div class="container text-center">
       	<a class="cc-facebook btn btn-link" href="https://www.facebook.com/prajeshpuri" target="_blank"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a>
       	<a class="cc btn btn-link" href="https://www.quora.com/profile/Prajesh-Puri" target="_blank"><i class="fa fa-quora fa-2x "></i></a>
