Nav-bar color change

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about"><b>About</b></a></li>
               <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li> -->
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">Projects</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects"><b>Projects</b></a></li>
               <!--  <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>-->
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact"><b>Contact</b></a></li>
             </ul>
           </div>
         </div>
@@ -81,8 +81,8 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body"><br>
                   <div class="h4 mt-0 title">About</div> <br>
-                  <p>Hello! I am Prajesh puri. Tech Enthusiast, Web Developer and UnderGrad.</p>
-                  <p>I am a third Year BCA student. A self motivated and hard worker seeking projects which provide a
+                  <p>Hello! I am Prajesh Puri. Tech Enthusiast, Web Developer and UnderGrad.</p>
+                  <p>I am a BCA Graduate. A self motivated and hard worker seeking projects which provide a
                     vast pool of opportunities to expand my knowledge. A reliable and results-driven individual who is
                     able to learn quickly.</p>
                   <p>Regularly working on improving my <strong>Front end skills</strong> and <strong> Programming skills
@@ -92,10 +92,10 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body"> <br>
                   <div class="h4 mt-0 title">Basic Information</div><br>
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
                     <div class="col-sm-8">21</div>
-                  </div>
+                  </div> -->
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
                     <div class="col-sm-8">prajeshpuri@gmail.com</div>
