--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/png" href="images/favicon.svg" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="css/aos.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="styles/main.css" rel="stylesheet">
@@ -61,13 +61,13 @@
               <div class="container">
                 <div class="button-container">
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/prajeshpuri/"
-                    target="_blank" rel="tooltip"><i class="fa fa-linkedin"></i></a>
+                    target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/Prajeshpuri"
-                    target="_blank" rel="tooltip"><i class="fa fa-github"></i></a>
+                    target="_blank" rel="noopener"><i class="fa fa-github"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/PrajeshPuri"
-                    target="_blank" rel="tooltip"><i class="fa fa-twitter"></i></a>
+                    target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.quora.com/profile/Prajesh-Puri"
-                    target="_blank" rel="tooltip"><i class="fa fa-quora"></i></a>
+                    target="_blank" rel="noopener"><i class="fa fa-quora"></i></a>
                 </div>
               </div>
             </div> <br> <br>
@@ -188,7 +188,7 @@
                       style="color: inherit; text-decoration: none;">
                       <div class="card-body m-3" data-aos="zoom-in"
                         style="background-color:rgb(41, 41, 41); border-radius: 5%;">
-                        <img class="card-img-top" src="images/bg.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/bg.webp" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">APNA Notesite</h5>
                           <p class="card-text">
@@ -345,13 +345,13 @@
     <footer class="footer" style="background-color:black; color:white;">
       <div class="container text-center">
         <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/prajeshpuri/" target="_blank"
-          rel="tooltip"><i class="fa fa-linkedin fa-3x"></i></a>
-        <a class="cc-github btn btn-link" href="https://github.com/Prajeshpuri" target="_blank" rel="tooltip"><i
+          rel="noopener"><i class="fa fa-linkedin fa-3x"></i></a>
+        <a class="cc-github btn btn-link" href="https://github.com/Prajeshpuri" target="_blank" rel="noopener"><i
             class="fa fa-github fa-3x"></i></a>
-        <a class="cc-twitter btn btn-link" href="https://twitter.com/PrajeshPuri" target="_blank" rel="tooltip"><i
+        <a class="cc-twitter btn btn-link" href="https://twitter.com/PrajeshPuri" target="_blank" rel="noopener"><i
             class="fa fa-twitter fa-3x"></i></a>
         <a class="cc-quora btn btn-link" href="https://www.quora.com/profile/Prajesh-Puri" target="_blank"
-          rel="tooltip"><i class="fa fa-quora fa-3x"></i></a>
+          rel="noopener"><i class="fa fa-quora fa-3x"></i></a>
       </div>
       <div class="h4 title text-center">Prajesh Puri</div>
       <div class="text-center text-muted">
