--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="cc-profile-image"><a href="#"><img src="images/prajesh.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Prajesh Puri</div>
                 <p class="category text-white"> Tech Enthusiast, Web Developer, UnderGrad</p>
-                <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-                  data-aos-anchor="data-aos-anchor">Get In Touch</a>
+                <a class="btn btn-primary mr-2" href="https://drive.google.com/file/d/1dSwHfN9I_wOJswKbjv6DdiEMp8MpMEXH/view?usp=sharing" target="_blank" rel="noopener" data-aos="zoom-in"
+                  data-aos-anchor="data-aos-anchor">Resume</a>
               </div>
             </div>
             <div class="section">
@@ -201,7 +201,7 @@
                   </div>
 
                   <div class="col-md-4">
-                    <a href="https://prajeshpuri.tech/Neuroimaging/" target="_blank" rel="noopener noreferrer"
+                    <a href="https://prajeshpuri.github.io/Neuroimaging/" target="_blank" rel="noopener noreferrer"
                       style="color: inherit; text-decoration: none;">
                       <div class="card-body m-3" data-aos="zoom-in"
                         style="background-color:rgb(41, 41, 41); border-radius: 5%;">
@@ -217,8 +217,8 @@
                   </div>
 
                   <div class="col-md-4">
-                    <a href="http://houseprice.prajeshpuri.tech/" target="_blank" rel="noopener noreferrer"
-                      style="color: inherit; text-decoration: none;">
+                    <!-- <a href="http://houseprice.prajeshpuri.tech/" target="_blank" rel="noopener noreferrer"
+                      style="color: inherit; text-decoration: none;"> -->
                       <div class="card-body m-3" data-aos="zoom-in"
                         style="background-color:rgb(41, 41, 41); border-radius: 5%;">
                         <img class="card-img-top" src="images/house.jpg" alt="Card image cap">
@@ -228,7 +228,7 @@
                           </p>
                         </div>
                       </div>
-                    </a>
+                    <!-- </a> -->
                   </div>
                 </div>
 
@@ -238,7 +238,7 @@
                   <div class="col-md-2">
                   </div>
                   <div class="col-md-4">
-                    <a href="http://casualty.prajeshpuri.tech/" target="_blank" rel="noopener noreferrer"
+                    <a href="http://3.15.155.246/" target="_blank" rel="noopener noreferrer"
                       style="color: inherit; text-decoration: none;">
                       <div class="card-body m-3" data-aos="zoom-in"
                         style="background-color:rgb(41, 41, 41); border-radius: 5%;">
@@ -253,7 +253,7 @@
                   </div>
 
                   <div class="col-md-4">
-                    <a href="https://prajeshpuri.tech/crazy-quiz/" target="_blank" rel="noopener noreferrer"
+                    <a href="https://prajeshpuri.github.io/crazy-quiz/" target="_blank" rel="noopener noreferrer"
                       style="color: inherit; text-decoration: none;">
                       <div class="card-body m-3" data-aos="zoom-in"
                         style="background-color:rgb(41, 41, 41); border-radius: 5%;">
