--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#about"><b>About</b></a></li>
               <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li> -->
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects"><b>Projects</b></a></li>
-              <!--  <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>-->
+              <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li> -->
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact"><b>Contact</b></a></li>
             </ul>
           </div>
@@ -66,8 +66,8 @@
                     target="_blank" rel="noopener"><i class="fa fa-github"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/PrajeshPuri"
                     target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.quora.com/profile/Prajesh-Puri"
-                    target="_blank" rel="noopener"><i class="fa fa-quora"></i></a>
+                  <!--<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.quora.com/profile/Prajesh-Puri"
+                    target="_blank" rel="noopener"><i class="fa fa-quora"></i></a> -->
                 </div>
               </div>
             </div> <br> <br>
@@ -98,15 +98,15 @@
                   </div> -->
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                    <div class="col-sm-8">prajeshpuri@gmail.com</div>
+                    <div class="col-sm-8">prajeshpuri21@gmail.com</div>
                   </div>
-                  <div class="row mt-3">
+                  <!--<div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
                     <div class="col-sm-8">+91 9582675764</div>
-                  </div>
+                  </div> -->
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                    <div class="col-sm-8">Delhi,India</div>
+                    <div class="col-sm-8">Toronto, Canada</div>
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -118,7 +118,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="section" id="skill" style="background-color:black; color:white;">
+       <!--<div class="section" id="skill" style="background-color:black; color:white;">
         <div class="container" style="color:white;">
           <div class="h4 text-center mb-4 title">Professional Skills</div>
           <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -278,6 +278,41 @@
         <div class="section" style="background-color:black; color:white;">
           <div class="container cc-education">
             <div class="h4 text-center mb-4 title"> <br><br> <br> Education</div>
+            
+            <div class="card" style="background-color:rgb(22, 22, 22);">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-education-header">
+                    <p>2022 - 2023</p>
+                    <div class="h5">Graduate Certificate</div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Graduate Certificate in Cloud Architecture and Administration</div>
+                    <p class="category"> Seneca Polytechnic, Toronto</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card" style="background-color:rgb(22, 22, 22);">
+              <div class="row">
+                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body cc-education-header">
+                    <p>2022 - 2022</p>
+                    <div class="h5">Graduate Certificate</div>
+                  </div>
+                </div>
+                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Graduate Certificate in Cybersecurity and Threat Management</div>
+                    <p class="category"> Seneca Polytechnic, Toronto</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="card" style="background-color:rgb(22, 22, 22);">
               <div class="row">
                 <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -306,7 +341,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Science with Mathematics</div>
-                    <p class="category"> Arunodaya Public School, CBSE</p>
+                    <p class="category"> Arunodaya Public School, Delhi</p>
                   </div>
                 </div>
               </div>
@@ -322,14 +357,14 @@
                   <div class="card mb-0" data-aos="zoom-in" style="background-color:rgb(22, 22, 22);">
                     <div class="h4 text-center title">Contact Me</div>
                     <div class=" row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                         <div class="card-body">
-                          <p class="mb-0"><strong>Address </strong></p>
-                          <p class="pb-2">Delhi,India</p>
-                          <p class="mb-0"><strong>Phone</strong></p>
-                          <p class="pb-2">+919582675764</p>
-                          <p class="mb-0"><strong>Email Me At</strong></p>
-                          <p>prajeshpuri@gmail.com</p>
+                          <!-- <p class="mb-0"><strong>Address </strong></p>
+                          <p class="pb-2">Toronto,Canada</p> -->
+                          <!--<p class="mb-0"><strong>Phone</strong></p>
+                          <p class="pb-2">+919582675764</p> -->
+                          <p class="text-center"><strong>Email Me At</strong></p>
+                          <p class="text-center">prajeshpuri21@gmail.com</p>
                         </div>
                       </div>
                     </div>
@@ -350,8 +385,8 @@
             class="fa fa-github fa-3x"></i></a>
         <a class="cc-twitter btn btn-link" href="https://twitter.com/PrajeshPuri" target="_blank" rel="noopener"><i
             class="fa fa-twitter fa-3x"></i></a>
-        <a class="cc-quora btn btn-link" href="https://www.quora.com/profile/Prajesh-Puri" target="_blank"
-          rel="noopener"><i class="fa fa-quora fa-3x"></i></a>
+        <!-- <a class="cc-quora btn btn-link" href="https://www.quora.com/profile/Prajesh-Puri" target="_blank"
+          rel="noopener"><i class="fa fa-quora fa-3x"></i></a> -->
       </div>
       <div class="h4 title text-center">Prajesh Puri</div>
       <div class="text-center text-muted">
