Minor fix in Contact me and education section

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Graduate Certificate in Cloud Architecture and Administration</div>
-                    <p class="category"> Seneca Polytechnic, Toronto</p>
+                    <p class="category"> Seneca Polytechnic, Toronto, Canada</p>
                   </div>
                 </div>
               </div>
@@ -307,7 +307,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Graduate Certificate in Cybersecurity and Threat Management</div>
-                    <p class="category"> Seneca Polytechnic, Toronto</p>
+                    <p class="category"> Seneca Polytechnic, Toronto, Canada</p>
                   </div>
                 </div>
               </div>
@@ -324,7 +324,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Bachelor in Computer Application</div>
-                    <p class="category">Maharaja Surajmal Institute, IP University</p>
+                    <p class="category">Maharaja Surajmal Institute, IP University, Delhi, India</p>
                   </div>
                 </div>
               </div>
@@ -341,7 +341,7 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Science with Mathematics</div>
-                    <p class="category"> Arunodaya Public School, Delhi</p>
+                    <p class="category"> Arunodaya Public School, Delhi, India</p>
                   </div>
                 </div>
               </div>
@@ -355,7 +355,7 @@
               <div class="row ">
                 <div class="col-md-9">
                   <div class="card mb-0" data-aos="zoom-in" style="background-color:rgb(22, 22, 22);">
-                    <div class="h4 text-center title">Contact Me</div>
+                    <div class="h4 text-center title">To Contact</div>
                     <div class=" row">
                       <div class="col-md-12">
                         <div class="card-body">
