Education details added

--- a/index.html
+++ b/index.html
@@ -291,6 +291,11 @@
                   <div class="card-body">
                     <div class="h5">Graduate Certificate in Cloud Architecture and Administration</div>
                     <p class="category"> Seneca Polytechnic, Toronto, Canada</p>
+                    <ul> 
+                      <li><b>GPA:</b> 3.9/4.0</li>
+                      <li>Graduated with Honours</li>
+                      <li><b>Relevant Courses:</b> Cloud Automation and Control Systems, Cloud Architectrue, Intro to Cloud Infrastructure, Data Storage and Management Technologies, Security Management, Cloud Integration, Portable Technologies in Cloud, Project Management</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -308,6 +313,11 @@
                   <div class="card-body">
                     <div class="h5">Graduate Certificate in Cybersecurity and Threat Management</div>
                     <p class="category"> Seneca Polytechnic, Toronto, Canada</p>
+                    <ul> 
+                      <li><b>GPA:</b> 4.0/4.0</li>
+                      <li>Graduated with High Honours</li>
+                      <li><b>Relevant Courses:</b> Identity and Access Management, Mobile Application Security, Security Architecture, IT Security Forensics, Security for Cloud </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -325,6 +335,10 @@
                   <div class="card-body">
                     <div class="h5">Bachelor in Computer Application</div>
                     <p class="category">Maharaja Surajmal Institute, IP University, Delhi, India</p>
+                    <ul> 
+                      <li><b>GPA:</b> 8.8/10</li>
+                      <li><b>Relevant Courses:</b> Software Engineering and Software Testing, Computer Networks, Data Mining, Mathematics, Physics, C/C++, VB.NET, Python and WEB Tech (HTML, CSS, Javascript) </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -340,8 +354,11 @@
                 </div>
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
-                    <div class="h5">Science with Mathematics</div>
+                    <div class="h5">Science with Computer Science</div>
                     <p class="category"> Arunodaya Public School, Delhi, India</p>
+                    <ul> 
+                      <li><b>Relevant Courses:</b> Physics, Chemistry, Mathematics, Computer Science and English  </li>
+                    </ul>
                   </div>
                 </div>
               </div>
