Updated about me

--- a/index.html
+++ b/index.html
@@ -81,12 +81,8 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body"><br>
                   <div class="h4 mt-0 title">About</div> <br>
-                  <p>Hello! I am Prajesh Puri. Tech Enthusiast, Web Developer and UnderGrad.</p>
-                  <p>I am a BCA Graduate. A self motivated and hard worker seeking projects which provide a
-                    vast pool of opportunities to expand my knowledge. A reliable and results-driven individual who is
-                    able to learn quickly.</p>
-                  <p>Regularly working on improving my <strong>Front end skills</strong> and <strong> Programming skills
-                    </strong>.</p> <br> <br>
+                  <p>I am a highly motivated and technically proficient IT professional with a passion for technology and a dedication to delivering exceptional results. With a strong educational background in cloud architecture and cybersecurity, coupled with practical experience in IT support roles, I bring a diverse skill set to any team. I thrive in dynamic environments, where I can leverage my problem-solving abilities, excellent communication skills, and a proactive approach to contribute effectively. Whether collaborating with colleagues on complex projects or providing premier support to clients, I am committed to continuous learning and growth to stay at the forefront of the rapidly evolving technology landscape.</p>
+                  <br> <br>
                 </div>
               </div>
               <div class="col-lg-6 col-md-12">
