Added Experience Section

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="page-header-image" data-parallax="true" style="background-image: url('images/0-1.gif');"></div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="images/prajesh.jpg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="images/prajesh.jpeg" alt="Image" /></a></div>
                 <div class="h2 title">Prajesh Puri</div>
-                <p class="category text-white"> Tech Enthusiast, Web Developer, UnderGrad</p>
+                <p class="category text-white"> Cybersecurity and Cloud Architecture Professional</p>
                 <a class="btn btn-primary mr-2" href="https://drive.google.com/file/d/1dSwHfN9I_wOJswKbjv6DdiEMp8MpMEXH/view?usp=sharing" target="_blank" rel="noopener" data-aos="zoom-in"
                   data-aos-anchor="data-aos-anchor">Resume</a>
               </div>
@@ -171,6 +171,62 @@
           </div>
         </div>
       </div> -->
+
+      <div class="section" style="background-color:black; color:white;">
+        <div class="container cc-education">
+          <div class="h4 text-center mb-4 title"> <br><br> <br> Experience</div>
+          
+          <div class="card" style="background-color:rgb(22, 22, 22);">
+            <div class="row">
+              <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body cc-education-header">
+                  <p>May 2023 - Aug 2023</p>
+                  <div class="h5">IT Technician Co-op</div>
+                </div>
+              </div>
+              <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body">
+                  <div class="h5">Kinectrics Inc.</div>
+                  <p class="category"> Etobicoke, ON Canada</p>
+                  <ul> 
+                    <li>Provided Premier Tier 1 staff to support C-level executives (CEO, COO, CFO) to resolve the issue immediately.</li>
+                    <li>Successfully resolved 300+ tech tickets, ensuring 100% customer satisfaction with effective troubleshooting and service.</li>
+                    <li>Assist in onboarding and offboarding of staff. Imaging laptops, installing role-specific software, and MFA setups. </li>
+                    <li>Deployed and maintained computers, laptops, and printers’ infrastructure, ensuring 99% uptime and optimal performance.</li>
+                    <li>Managed tech tickets with Zendesk and Bomgar, streamlining support processes, resulting in a 20% efficiency gain.</li>
+                    <li>Collaborated with the IT team, addressing complex challenges and projects through effective communication and teamwork. </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card" style="background-color:rgb(22, 22, 22);">
+            <div class="row">
+              <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body cc-education-header">
+                  <p>Oct 2021 - Dec 2021</p>
+                  <div class="h5">Virtually Testing Foundation</div>
+                </div>
+              </div>
+              <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body">
+                  <div class="h5">Graduate Certificate in Cybersecurity and Threat Management</div>
+                  <p class="category"> Los Angeles, CA, USA</p>
+                  <ul> 
+                    <li>Conducted 50+ web app vulnerability assessments using DVWA and Burp Suite, delivering detailed findings.</li>
+                    <li>Executed 20 Black Box Security Assessments, identifying and mitigating diverse vulnerabilities, and enhancing security.</li>
+                    <li>Contributed to 3 Network Security projects, engaging with 500+ community members through social media.</li>
+                    <li>Developed expertise in OWASP's Top 10, applying knowledge to resolve 30+ vulnerabilities</li>
+                    <li>Conducted employee training sessions on cybersecurity best practices, enhancing organizational security awareness.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <div class="section" id="projects" style="background-color:black; color:white;">
         <div class="container">
