--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#about"><b>About</b></a></li>
               <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li> -->
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience"><b>Experience</b></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects"><b>Projects</b></a></li>
-              <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li> -->
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact"><b>Contact</b></a></li>
             </ul>
           </div>
@@ -172,7 +172,7 @@
         </div>
       </div> -->
 
-      <div class="section" style="background-color:black; color:white;">
+      <div class="section" id="experience" style="background-color:black; color:white;">
         <div class="container cc-education">
           <div class="h4 text-center mb-4 title"> <br><br> <br> Experience</div>
           
