--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-education-header">
                   <p>Oct 2021 - Dec 2021</p>
-                  <div class="h5">Virtually Testing Foundation</div>
+                  <div class="h5">Penetration Testing Intern</div>
                 </div>
               </div>
               <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body">
-                  <div class="h5">Graduate Certificate in Cybersecurity and Threat Management</div>
+                  <div class="h5">Virtually Testing Foundation</div>
                   <p class="category"> Los Angeles, CA, USA</p>
                   <ul> 
                     <li>Conducted 50+ web app vulnerability assessments using DVWA and Burp Suite, delivering detailed findings.</li>
